--- a/db/postgres.yml
+++ b/db/postgres.yml
@@ -1,6 +1,8 @@
 postgres:
   container_name: postgres
   image: postgres
+  volumes:
+    - postgres_data:/var/lib/postgresql/data
   environment:
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: ${db_pass}
