--- a/db/mysql.yml
+++ b/db/mysql.yml
@@ -1,5 +1,7 @@
 mysql:
   container_name: mysql
   image: mysql:5.5
+  volumes:
+    - mysql_data:/var/lib/mysql
   environment:
     MYSQL_ROOT_PASSWORD: ${db_pass}
