--- a/document/ckan.yml
+++ b/document/ckan.yml
@@ -14,6 +14,8 @@ solr:
 ckan:
   container_name: ckan
   image: cygri/ckan:2.2.1
+  volumes:
+    - DATA:/opt/solr/example/solr/ckan/data
   environment:
     DATABASE_URL: postgresql://ckan:ckan@postgres/ckan
     SOLR_URL: http://solr:8983/solr/ckan
