--- a/development/kong.yml
+++ b/development/kong.yml
@@ -4,7 +4,7 @@ cassandra:
 
 kong:
   container_name: kong
-  image: articulate/kong-monit
+  image: mashape/kong
   ports:
     - 9999:9999
     - 8000:8000
