correct environment variable VIRTUAL_HOST

--- a/pm/tuleap.yml
+++ b/pm/tuleap.yml
@@ -2,7 +2,7 @@ tuleap:
   container_name: tuleap
   image: enalean/tuleap-aio
   environment:
-    - VIRTUAL_HOST=localhost
+    VIRTUAL_HOST: localhost
   volumes:
     - SOME_DATA_FOLDER:/data
   ports:
