--- a/cms/drupal.yml
+++ b/cms/drupal.yml
@@ -1,14 +1,15 @@
-mysql:
-  extends:
-    file: ../db/mysql.yml
-    service: mysql
-
-drupal:
-  container_name: drupal
-  image: samos123/drupal
-  environment:
-    DB_HOST: mysql
-    DB_PASS: ${db_pass}
-    ADMIN_PASSWORD: ${admin_pass}
-  ports:
-    - "80:80"
+version: '2'
+services:
+  drupal:
+    container_name: drupal
+    environment:
+      ADMIN_PASSWORD: ${admin_pass}
+      DB_HOST: mysql
+      DB_PASS: ${db_pass}
+    image: samos123/drupal
+    ports:
+    - 80:80
+  mysql:
+    extends:
+      file: ../db/mysql.yml
+      service: mysql
