--- a/cms/joomla.yml
+++ b/cms/joomla.yml
@@ -1,16 +1,17 @@
-mysql:
-  extends:
-    file: ../db/mysql.yml
-    service: mysql
-
-joomla:
-  container_name: joomla
-  image: joomla
-  volumes:
-    - joomla_html:/var/www/html
-  environment:
-    JOOMLA_DB_HOST: mysql:3306
-    JOOMLA_DB_USER: root
-    JOOMLA_DB_PASSWORD: ${db_pass}
-  ports:
-    - "80:80"
+version: '2'
+services:
+  joomla:
+    container_name: joomla
+    environment:
+      JOOMLA_DB_HOST: mysql:3306
+      JOOMLA_DB_PASSWORD: ${db_pass}
+      JOOMLA_DB_USER: root
+    image: joomla
+    ports:
+    - 80:80
+    volumes:
+    - ./joomla_html:/var/www/html
+  mysql:
+    extends:
+      file: ../db/mysql.yml
+      service: mysql
