--- a/collaboration/hastebin.yml
+++ b/collaboration/hastebin.yml
@@ -1,5 +1,7 @@
-hastebin:
-  container_name: hastebin
-  image: jmvrbanac/hastebin
-  ports:
-    - "7777:7777"
+version: '2'
+services:
+  hastebin:
+    container_name: hastebin
+    image: jmvrbanac/hastebin
+    ports:
+    - 7777:7777
