--- a/collaboration/mattermost.yml
+++ b/collaboration/mattermost.yml
@@ -1,12 +1,14 @@
-mattermost:
-  container_name: mattermost
-  image: mattermost/platform
-  volumes:
-    - mattermost_mysql:/var/lib/mysql
-  environment:
-    MYSQL_ROOT_PASSWORD: ${db_pass}
-    MYSQL_DATABASE: mattermost_test
-    MYSQL_USER: mmuser
-    MYSQL_PASSWORD: mostest
-  ports:
-    - "80:80"
+version: '2'
+services:
+  mattermost:
+    container_name: mattermost
+    environment:
+      MYSQL_DATABASE: mattermost_test
+      MYSQL_PASSWORD: mostest
+      MYSQL_ROOT_PASSWORD: ${db_pass}
+      MYSQL_USER: mmuser
+    image: mattermost/platform
+    ports:
+    - 80:80
+    volumes:
+    - ./mattermost_mysql:/var/lib/mysql
