--- a/digital signage/xibo.yml
+++ b/digital signage/xibo.yml
@@ -1,12 +1,14 @@
-xibo:
-  container_name: xibo
-  image: chimeradev/xibo-docker
-  volumes:
-    - xibo_data:/xibo-data
-  environment:
-    MYSQL_HOST: 127.0.0.1
-    MYSQL_PASS: ${db_pass}
-    XIBO_ADMIN_PASS: ${admin_pass}
-    MYSQL_DBNAME: xibo
-  ports:
-    - "80:80"
+version: '2'
+services:
+  xibo:
+    container_name: xibo
+    environment:
+      MYSQL_DBNAME: xibo
+      MYSQL_HOST: 127.0.0.1
+      MYSQL_PASS: ${db_pass}
+      XIBO_ADMIN_PASS: ${admin_pass}
+    image: chimeradev/xibo-docker
+    ports:
+    - 80:80
+    volumes:
+    - ./xibo_data:/xibo-data
