--- a/document/alfresco.yml
+++ b/document/alfresco.yml
@@ -1,22 +1,21 @@
-postgres:
-  extends:
-    file: ../db/postgres.yml
-    service: postgres
-  environment:
-    POSTGRES_DB: alfresco
-
-alfresco:
-  container_name: alfresco
-  image: rsippl/alfresco
-  volumes:
-    - SOME_DATA_FOLDER:/mnt/content_store
-  environment:
-    CONTENT_STORE: /mnt/content_store
-    DB_HOST: postgres
-    DB_USERNAME: postgres
-    DB_NAME: alfresco
-    DB_PASSWORD: ${db_pass}
-  ports:
-    - "8080:8080"
-
-# default username ans password: admin admin
+version: '2'
+services:
+  alfresco:
+    container_name: alfresco
+    environment:
+      CONTENT_STORE: /mnt/content_store
+      DB_HOST: postgres
+      DB_NAME: alfresco
+      DB_PASSWORD: ${db_pass}
+      DB_USERNAME: postgres
+    image: rsippl/alfresco
+    ports:
+    - 8080:8080
+    volumes:
+    - ./SOME_DATA_FOLDER:/mnt/content_store
+  postgres:
+    environment:
+      POSTGRES_DB: alfresco
+    extends:
+      file: ../db/postgres.yml
+      service: postgres
