--- a/hacker/torbox.yml
+++ b/hacker/torbox.yml
@@ -1,5 +1,7 @@
-torbox:
-  container_name: torbox
-  image: hsaito/torbox
-  ports:
-    - "9050:9050"
+version: '2'
+services:
+  torbox:
+    container_name: torbox
+    image: hsaito/torbox
+    ports:
+    - 9050:9050
