--- a/irc/shout.yml
+++ b/irc/shout.yml
@@ -1,9 +1,11 @@
-shout:
-  container_name: shout
-  image: arbourd/shout
-  volumes:
-    - shout_data:/shout
-  environment:
-    PORT: 8080
-  ports:
-    - "8080:8080"
+version: '2'
+services:
+  shout:
+    container_name: shout
+    environment:
+      PORT: 8080
+    image: arbourd/shout
+    ports:
+    - 8080:8080
+    volumes:
+    - ./shout_data:/shout
