--- a/multimedia/koken.yml
+++ b/multimedia/koken.yml
@@ -1,5 +1,7 @@
-koken:
-  container_name: koken
-  image: koken/koken-lemp
-  ports:
+version: '2'
+services:
+  koken:
+    container_name: koken
+    image: koken/koken-lemp
+    ports:
     - 8080:8080
