--- a/blog/ghost.yml
+++ b/blog/ghost.yml
@@ -1,7 +1,9 @@
-ghost:
-  container_name: ghost
-  image: ghost
-  volumes:
-    - ghost_blog:/var/lib/ghost
-  ports:
-    - "2368:2368"
+version: '2'
+services:
+  ghost:
+    container_name: ghost
+    image: ghost
+    ports:
+    - 2368:2368
+    volumes:
+    - ./ghost_blog:/var/lib/ghost
