--- a/cms/wordpress.yml
+++ b/cms/wordpress.yml
@@ -1,16 +1,17 @@
-mysql:
-  extends:
-    file: ../db/mysql.yml
-    service: mysql
-
-wordpress:
-  container_name: wordpress
-  image: wordpress
-  volumes:
-    - wordpress_html:/var/www/html
-  environment:
-    WORDPRESS_DB_HOST: mysql:3306
-    WORDPRESS_DB_USER: root
-    WORDPRESS_DB_PASSWORD: ${db_pass}
-  ports:
-    - "80:80"
+version: '2'
+services:
+  mysql:
+    extends:
+      file: ../db/mysql.yml
+      service: mysql
+  wordpress:
+    container_name: wordpress
+    environment:
+      WORDPRESS_DB_HOST: mysql:3306
+      WORDPRESS_DB_PASSWORD: ${db_pass}
+      WORDPRESS_DB_USER: root
+    image: wordpress
+    ports:
+    - 80:80
+    volumes:
+    - ./wordpress_html:/var/www/html
