--- a/collaboration/eXo.yml
+++ b/collaboration/eXo.yml
@@ -1,5 +1,7 @@
-eXo:
-  container_name: eXo
-  image: exoplatform/exo-community
-  ports:
-    - "8080:8080"
+version: '2'
+services:
+  eXo:
+    container_name: eXo
+    image: exoplatform/exo-community
+    ports:
+    - 8080:8080
