--- a/development/kong.yml
+++ b/development/kong.yml
@@ -1,14 +1,15 @@
-cassandra:
-  container_name: cassandra
-  image: cassandra:2.2.4
-
-kong:
-  container_name: kong
-  image: mashape/kong:0.5.4
-  restart: always
-  ports:
+version: '2'
+services:
+  cassandra:
+    container_name: cassandra
+    image: cassandra:2.2.4
+  kong:
+    container_name: kong
+    image: mashape/kong:0.5.4
+    ports:
     - 9999:9999
     - 8000:8000
     - 8001:8001
     - 8443:8443
     - 7946:7946
+    restart: always
