--- a/streaming/icecast.yml
+++ b/streaming/icecast.yml
@@ -1,13 +1,15 @@
-icecast:
-  container_name: icecast
-  image: moul/icecast
-  volumes:
-    - icecast_logs:/var/log/icecast2
-    - icecast_localtime:/etc/localtime
-  environment:
+version: '2'
+services:
+  icecast:
+    container_name: icecast
+    environment:
     - ICECAST_SOURCE_PASSWORD: ${source_pass}
     - ICECAST_ADMIN_PASSWORD: ${admin_pass}
     - ICECAST_PASSWORD: ${icecast_pass}
     - ICECAST_RELAY_PASSWORD: ${icecast_relay_pass}
-  ports:
+    image: moul/icecast
+    ports:
     - 8000:8000
+    volumes:
+    - ./icecast_logs:/var/log/icecast2
+    - ./icecast_localtime:/etc/localtime
