--- a/streaming/mistserver.yml
+++ b/streaming/mistserver.yml
@@ -1,10 +1,12 @@
-mistserver:
-  container_name: mistserver
-  image: ddvtech/mistserver
-  volumes:
-    - "SOME_FOLDER_WITH_VIDEO_FILES:/video"
-  ports:
-    - "4242:4242"
-    - "8080:8080"
-    - "1935:1935"
-    - "554:554"
+version: '2'
+services:
+  mistserver:
+    container_name: mistserver
+    image: ddvtech/mistserver
+    ports:
+    - 4242:4242
+    - 8080:8080
+    - 1935:1935
+    - 554:554
+    volumes:
+    - ./SOME_FOLDER_WITH_VIDEO_FILES:/video
