--- a/cms/joomla.yml
+++ b/cms/joomla.yml
@@ -13,5 +13,5 @@ services:
     - ./joomla_html:/var/www/html
   mysql:
     extends:
-      file: ../db/mysql.yml
+      file: ../database/mysql.yml
       service: mysql
