--- a/collaboration/openfire.yml
+++ b/collaboration/openfire.yml
@@ -6,7 +6,7 @@ services:
       MYSQL_PASSWORD: ${usr_pass}
       MYSQL_USER: openfire
     extends:
-      file: ../db/mysql.yml
+      file: ../database/mysql.yml
       service: mysql
   openfire:
     container_name: openfire
