--- a/development/sonarqube.yml
+++ b/development/sonarqube.yml
@@ -4,7 +4,7 @@ services:
     environment:
       POSTGRES_DB: sonar
     extends:
-      file: ../db/postgres.yml
+      file: ../database/postgres.yml
       service: postgres
   sonarqube:
     container_name: sonarqube
