--- a/ecommerce/prestashop.yml
+++ b/ecommerce/prestashop.yml
@@ -4,7 +4,7 @@ services:
     environment:
       MYSQL_DATABASE: prestashop
     extends:
-      file: ../db/mysql.yml
+      file: ../database/mysql.yml
       service: mysql
   prestashop:
     container_name: prestashop
