--- a/trouble-ticketing/osticket.yml
+++ b/trouble-ticketing/osticket.yml
@@ -6,7 +6,7 @@ services:
       MYSQL_PASSWORD: ${usr_pass}
       MYSQL_USER: osticket
     extends:
-      file: ../db/mysql.yml
+      file: ../database/mysql.yml
       service: mysql
   osticket:
     container_name: osticket
